# Tolitica

./: CMakeLists.txt  CMakeLists.txt.user.228868a  CMakeLists.txt.user.26cad51  CMakeLists.txt.user.4142579  CMakeLists.txt.user.c07e141  CMakeLists.txt.user.f5b4f2e  LICENSE  PKGBUILD-fixed  README.md  calamares_page.cpp  calamares_page.h  connectivityChecker.cpp  connectivityChecker.h  copy.txt  core_functions.cpp  core_functions.h  core_initial.cpp  drive_list_widget.cpp  drive_list_widget.h  res.qrc  skel-files.list  visualElements.qrc  widget.cpp  widget.h  xray-current-settings-kde.install
Tolitica-Arch7z/: core_functions.cpp  core_functions.h  core_initial.cpp  core_initial.h  main.cpp  plasma-reload-helper.sh  tolitica.install  widgetInitial.cpp  widgetInitial.h
ada_mounter_helper/: CMakeLists.txt  ada_mounter_helper.cpp  ada_mounter_helper.h  main.cpp
tolitica-legacy-backup/tolitica/: tolitica
tolitica-legacy-backup/tolitica/Tolitica_autogen/: Tolitica  mocs_compilation.cpp
tolitica-legacy-backup/tolitica/Tolitica_autogen/EWIEGA46WW/: moc_connectivityChecker.cpp  moc_connectivityChecker.cpp.d  moc_drive_list_widget.cpp  qrc_visualElements.cpp
